fix gap to comming

--- a/src/components/Main-Page/Comming/Comming.module.scss
+++ b/src/components/Main-Page/Comming/Comming.module.scss
@@ -6,7 +6,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 39px;
 
   @include for-size(phone) {
     flex-direction: column-reverse;
@@ -20,6 +19,7 @@
 
   @include for-size(laptop) {
     flex-direction: row;
+    gap: 0;
   }
 
   @include for-size(desktop) {
@@ -30,7 +30,6 @@
     margin-right: 0;
 
     @include for-size(laptop) {
-      margin-right: 40px;
     }
 
     @include for-size(desktop) {
